--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.6.6",
     "@faustwp/cli": "^2.0.0",
     "@faustwp/core": "^2.1.0",
+    "@next/font": "^14.1.0",
     "@wordpress/base-styles": "^4.36.0",
     "@wordpress/block-library": "^7.19.0",
     "classnames": "^2.3.1",
@@ -25,5 +26,10 @@
   "engines": {
     "node": ">=16",
     "npm": ">=8"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
